@@ -1,10 +1,11 @@
 <% @title = 'Templates' %>
-<h1><%= @title %></h1>
+<h1><% if @project %><%= link_to @project.name, @project %> &raquo;<% end %> <%= @title %></h1>
 
-<%= link_to image_tag('contour/addfile.png', :alt => '') + "Create New Template", new_template_path, :class => 'button positive' %>
+<%= link_to image_tag('contour/addfile.png', :alt => '') + "Create New Template", (@project ? new_template_path(:template => {:project_id => @project.id}) : new_template_path), :class => 'button positive' %>
 
 <%= form_tag templates_path, :method => :get, :remote => true, :id => "templates_search", :style => "margin-bottom:-5px" do %>
   <%= hidden_field_tag :order, params[:order] %>
+  <%= hidden_field_tag :project_id, params[:project_id] %>
   Search <%= text_field_tag 'search', params[:search] %> <%= information %>
 <% end %>
 
